fix fonts (wrong font)

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,5 +1,5 @@
-$font-family-bai-jamjuree: 'Bai Jamjuree', sans-serif;
-$font-family-sans-serif: $font-family-bai-jamjuree;
+$font-family-space-mono: 'Space Mono', monospace;
+$font-family-monospace: $font-family-space-mono;
 
 $color-strong-cyan: hsl(172, 67%, 45%);
 
